--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&family=Open+Sans&display=swap" rel="stylesheet"> -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,6 +14,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="bodyStryle.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <title>Leo Sinani Portfolio</title>
   </head>
   <body class="bg">
